--- a/Trabalho_PDS/Components/Pages/CurriculoYuri.razor
+++ b/Trabalho_PDS/Components/Pages/CurriculoYuri.razor
@@ -2,6 +2,9 @@
 
 <div class="container">
     <a class="btn-voltar" href="/" >← Voltar para Home</a>
+    <div class="foto-perfil-container">
+        <img src="https://virtual.ifro.edu.br/jiparana/pluginfile.php/225708/user/icon/boost_union/f2?rev=4623686" alt="Foto de Yuri Gabriel" class="foto-perfil" />
+    </div>
     <header>
         <h1>Yuri Gabriel</h1>
         <p class="subtitle">Desenvolvedor Flutter | Entusiasta de Linux</p>       
