--- a/Trabalho_PDS/Components/Pages/Home.razor
+++ b/Trabalho_PDS/Components/Pages/Home.razor
@@ -17,7 +17,7 @@
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Marcus
     </NavLink>
 
-    <NavLink class="nav-link" href="#" Match="NavLinkMatch.All">
+    <NavLink class="nav-link" href="curriculo-herrique" Match="NavLinkMatch.All">
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Henrique
     </NavLink>
 </body>
