--- a/Trabalho_PDS/Components/Pages/Home.razor
+++ b/Trabalho_PDS/Components/Pages/Home.razor
@@ -9,7 +9,7 @@
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Yuri
     </NavLink>
 
-    <NavLink class="nav-link" href="#" Match="NavLinkMatch.All">
+    <NavLink class="nav-link" href="curriculo-hugo" Match="NavLinkMatch.All">
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Hugo
     </NavLink>
 
