marquin mil grau

--- a/Trabalho_PDS/Components/Pages/Home.razor
+++ b/Trabalho_PDS/Components/Pages/Home.razor
@@ -20,4 +20,8 @@
     <NavLink class="nav-link" href="curriculo-herrique" Match="NavLinkMatch.All">
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Henrique
     </NavLink>
+
+    <NavLink class="nav-link" href="curriculo-matheus" Match="NavLinkMatch.All">
+        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Matheus
+    </NavLink>
 </body>
