--- a/Trabalho_PDS/Components/Pages/Home.razor
+++ b/Trabalho_PDS/Components/Pages/Home.razor
@@ -13,7 +13,7 @@
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Hugo
     </NavLink>
 
-    <NavLink class="nav-link" href="#" Match="NavLinkMatch.All">
+    <NavLink class="nav-link" href="curriculo-marcus" Match="NavLinkMatch.All">
         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Marcus
     </NavLink>
 
